--- a/services/hello_world/pyproject.toml
+++ b/services/hello_world/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.
 
 [project]
-name = "hello_worlder"
+name = "hello_world"
 version = "0.0.1"
 description = "Hello worlder is a simple package to print hello world"
 readme = "README.md"
@@ -27,7 +27,7 @@ dependencies = [
 ]
 
 [tool.setuptools.package-data]
-hello_worlder = ["py.typed"]
+hello_world = ["py.typed"]
 
 [project.optional-dependencies]
 dev = [
