chore: makefile improvements and renaming of shared

--- a/common/python/hello_world_projen_official/Makefile
+++ b/common/python/hello_world_projen_official/Makefile
@@ -14,37 +14,13 @@ test:
 	$(VENV_PATH)/bin/projen test
 
 lint:
-	@echo "\n>>> Code type checks (mypy)..."
-	# $(VENV_PATH)/bin/mypy src tests
-
-	@echo "\n>>> Code format checks (RUFF)..."
-	# $(VENV_PATH)/bin/ruff format --check src tests
-
-	@echo "\n>>> Code lint checks (RUFF)..."
-	# $(VENV_PATH)/bin/ruff check src tests
-
-	@echo "\n>>> Dependency vulnerability checks (pip-audit)..."
-	# $(VENV_PATH)/bin/pip-audit --cache-dir .cache/.audit_cache
-
-lint-fix:
-	$(VENV_PATH)/bin/ruff format
-	$(VENV_PATH)/bin/ruff check --fix
-
-update-lockfile:
-	@echo "Updating lock file (constraints.txt)..."
-	$(VENV_PATH)/bin/pip-compile --all-build-deps --all-extras --strip-extras \
-		--output-file=constraints.txt pyproject.toml
-	make build
 
 all: build test lint
 
 # run jupyer locally
-start:
-	$(VENV_PATH)/bin/jupyter lab --port 8888 --NotebookApp.iopub_data_rate_limit=1.0e10
-
 clean:
 	rm -rf $(VENV_PATH) .env
-	rm -rf build .cache .coverage
+	rm -rf build .pytest_cache
 
 # install required tools
 prepare:
@@ -63,6 +39,3 @@ prepare-venv:
 
 	@echo "Installing Projen $(PROJEN_VERSION)..."
 	$(VENV_PATH)/bin/pip3 install projen==$(PROJEN_VERSION)
-
-venv-activate:
-	# @echo "run 'source .venv/bin/activate' manually"
